fixed page cutoff and added back to top button

--- a/Templates/static/css/base.css
+++ b/Templates/static/css/base.css
@@ -27,6 +27,9 @@ html, body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     /*overflow: hidden;*/
 }
+html{
+    scroll-behavior: smooth;
+}
 #navigation-bar{
      overflow: hidden;
      padding:15px;
@@ -142,6 +145,19 @@ a:hover{
     /*outline: 0;*/
     /*-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);*/
     /*box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);*/
+}
+#to-top{
+    /*display: none; !* Hidden by default *!*/
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+    opacity: 0.9;
+}
+#to-top:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
 }
 /*small screens*/
 @media only screen and (max-width:800px){
